# worldcup-pool

./: .databricksignore  .env.example  .gitignore  LICENSE  README.md  app.yaml.template  databricks.yml  pyproject.toml  requirements.txt  wc2026_bracket.json
resources/: worldcup_dashboard.yml  worldcup_demo.lvdash.json  worldcup_resources.yml
scripts/: bootstrap_delta_from_lakebase.py  bootstrap_lakebase_app.sh  build_top_scorer_candidates_json.py  databricks_lakebase_to_delta.py  databricks_sync.py  delete_user_pool_data.py  simulate_data.py
ui/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  DefaultProfileIcon.tsx  api.ts  groupStandings.ts  knockoutBracket.ts  styles.css  teamFlags.ts  teamTla.ts  types.ts  vite-env.d.ts
worldcup_pool/: __init__.py  dev_knockout_test_fixtures.py  football_data.py  knockout_rules.py  player_pool.py  pool_limits.py  scoring.py  team_tla.py  tournament_picks.py  wc2026_official_groups.py
worldcup_pool/backend/: app.py  auth.py  config.py  db.py  models_api.py  routes.py  run.py
worldcup_pool/data/: wc2026_top_scorer_candidates.json
worldcup_pool/scripts/: sync_matches.py  time_machine_staging.py
worldcup_pool/services/: sync.py
worldcup_pool/simulation/: __init__.py  policy.py  run_full.py  standings.py
